# mai

./: .gitattributes  .gitignore  README.md  TASK.md  pyproject.toml  requirements.txt  train_detector.py
configs/: arena.yaml  camera.yaml
docs/: capture_checklist.md
legacy/: aruco_homography.py  compare_raw_reference_matching.py  extract_frames.py  train_facility.py
runs/detect/runs/crater/: args.yaml  results.csv
runs/detect/runs/crater2/: args.yaml  results.csv
runs/detect/runs/uxo2_baseline/: args.yaml  results.csv
runs/detect/runs/uxo2_copypaste/: args.yaml  results.csv
runs/detect/runs/uxo_baseline/: args.yaml  results.csv
runs/detect/runs/uxo_copypaste/: args.yaml  results.csv
src/mai/: __init__.py  arena.py  aruco.py  copypaste.py  frames.py  homography.py  llm.py  localize.py  perf.py  pose.py  report.py  sizing.py  synthetic.py  ticks.py  topview.py  undistort.py  viz.py  zones.py
src/mai/cli/: benchmark.py  build_copypaste.py  build_topview.py  build_yolo_dataset.py  calibrate_arena.py  crop_zones.py  extract_dataset.py  extract_frames.py  extract_oblique.py  localize_pass.py  predict_zones.py  run_mission.py  scan_aruco.py  stress_lighting.py  train_detector.py  tune_undistort.py
tests/: test_arena.py  test_geometry.py  test_localize.py  test_oblique.py  test_report.py  test_sizing.py
