[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mai"
version = "0.1.0"
description = "ROKAF AI Hackathon: drone ISR / battle damage assessment pipeline"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
